Fixed overflowing button

--- a/src/layout/draggables/DraggableItem.scss
+++ b/src/layout/draggables/DraggableItem.scss
@@ -19,6 +19,8 @@
   cursor: pointer;
   opacity: 1;
   transition: background-color 16s cubic-bezier(.1,.68,.89,.64);
+  display: flex;
+  align-items: center;
 }
 
 .draggable-remove-btn{
